test/official_tests/super/parenthesized.lox
class A {
  method() {}
}

class B < A {
  method() {
    // error: {"line":8,"message":"Expect '.' after 'super'","type":"ParseError"}
    (super).method();
  }
}
